return cached oracle history